# kth-mono

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  release.sh
src/: CMakeLists.txt
src/blockchain/: CMakeLists.txt  README.md  conanfile.py
src/blockchain/helpers/: blocks.txt  send_raw_tx.py
src/blockchain/src/: version.cpp
src/blockchain/test/: block_chain.cpp  block_entry.cpp  block_pool.cpp  branch.cpp  mempool_tests.cpp  test_helpers.hpp  transaction_entry.cpp  transaction_pool.cpp  utxo.cpp  validate_block.cpp  validate_transaction.cpp
src/c-api/: CMakeLists.txt  README.md  conanfile.py
src/c-api/console/: config_test.cpp  ds_proof.c  error_test.cpp  get_block.c  main copy.c  main.c  main.cpp  main_payment_addr_cash_aware.cpp  node_info.c  platform_test.cpp  print_headers.cpp  test_2025_issue.cpp  test_deadlock.cpp  test_header_hash.cpp  test_libconfig.cpp  test_wallet.c  test_wallet.cpp  test_wallet2.c  test_wallet_manager.c
src/c-api/src/: binary.cpp  double_list.cpp  hash.cpp  hash_list.cpp  node.cpp  node_info.cpp  platform.cpp  string_list.cpp  u32_list.cpp  u64_list.cpp
src/consensus/: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/consensus/helpers/: clone-copy.py
src/consensus/test/: consensus__script_error_to_verify_result.cpp  consensus__script_verify.cpp  consensus__verify_flags_to_script_flags.cpp  script.hpp  test_helpers.hpp
src/database/: CMakeLists.txt  README.md  conanfile.py
src/database/src/: data_base.cpp  settings.cpp  store.cpp  version.cpp
src/database/test/: block_database.cpp  data_base.cpp  main.cpp  (+9 more)
src/domain/: CMakeLists.txt  README.md  conanfile.py
src/infrastructure/: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/network/: CMakeLists.txt  README.md  conanfile.py
src/node/: CMakeLists.txt  README.md  conanfile.py
src/node-exe/: CMakeLists.txt  README.md  conanfile.py
src/secp256k1/: CMakeLists.txt  README.md  README_KTH.md  conanfile.py
test_targets/: CMakeLists.txt  conanfile.py  test_individual.cpp  test_meta.cpp
(+1010 files in other folders)
